<resources>
    <string name="app_name">Genie WP Matrimony</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_title">Welcome to Genie WP Matrimony !</string>
    <string name="configure_auto_txt">Auto-Config using QR Code</string>
    <string name="configure_manually_txt">Manual Configuration</string>

    <string name="action_settings">Settings</string>
    <string name="list_of_configs_txt">Configuration Lists</string>

    <string name="action_exit">Exit</string>
    <string name="action_add_new">Add New</string>
    <string name="user_note_txt">Puzzled what to do?, Please contact your Genie WP Matrimony Admin to get an Auto Config Key !</string>
    <string name="title_activity_capture_qr">CaptureQrActivity</string>
    <string name="web_page_go">GO</string>

    <string name="btn_cancel_txt">Cancel</string>
    <string name="btn_ok_txt">OK</string>

    <!-- Menu Titles -->
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_clear_config">Clear Config</string>
    <string name="menu_settings">Settings</string>

    <string name="search_menuTitle">Search Profiles</string>
    <string name="search_gwpm_id">User ID</string>
    <string name="search_gwpm_from_dob">Date of Birth - From</string>
    <string name="search_gwpm_to_dob">Date of Birth - To</string>
    <string name="search_gwpm_year_from">Age From</string>
    <string name="search_gwpm_year_to">Age To</string>
    <string name="search_gwpm_age_btwn">Age Between</string>
    <string name="search_gwpm_gender">Gender</string>

    <string name="search_gwpm_btn_ok_txt">Search</string>
    <string name="search_gwpm_btn_clear_txt">Clear</string>

    <string name="age_picker_title">Search</string>

    <string name="search_gwpm_gender_male">Male</string>
    <string name="search_gwpm_gender_female">Female</string>

    <string name="profile_profile_thumb">No Profile PIC</string>
    <string name="profile_view_btn">View</string>

</resources>
