<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itechgenie.apps.geniewpmatrimony.ConfigurationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/app_title" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/configure_auto_txt"
        android:id="@+id/configure_auto_btn"
        android:onClick="onClickConfigKey"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/configure_manually_txt"
        android:id="@+id/configure_manually_btn"
        android:onClick="onClickManual"/>

    <View android:id="@+id/spacer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/user_note_txt"
        />

</LinearLayout>
