<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.itechgenie.apps.geniewpmatrimony.MainActivity"
    tools:showIn="@layout/app_bar_main">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14dp"
        android:text="@string/app_title" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/configure_auto_txt"
        android:id="@+id/configure_auto_btn" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/configure_manually_txt"
        android:id="@+id/configure_manually_btn"
        android:onClick="onClick"/>

    <View android:id="@+id/spacer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textAlignment="center"
        android:text="@string/user_note_txt"
        />

</LinearLayout>



</RelativeLayout>
